--- a/es/casosdeuso.html
+++ b/es/casosdeuso.html
@@ -88,7 +88,7 @@
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
                     <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M" target="_blank">VIDEO DE PRODUCTO</a></li>
-                    <li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>
+                    <!--<li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>-->
                 </ul>
               </li>
 
@@ -1317,7 +1317,7 @@ Workep is the Project Management platform that's flexible enough to adapt to eve
               <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
               <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
-              <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
+              <!--<li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>-->
               <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
             </ul>
           </div>
