--- a/es/hechoparagoogle.html
+++ b/es/hechoparagoogle.html
@@ -88,7 +88,7 @@
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
                     <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M" target="_blank">VIDEO DE PRODUCTO</a></li>
-                    <li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>
+                   <!--<li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>-->
                 </ul>
               </li>
 
@@ -428,7 +428,7 @@
   </div>
 
 
-<div class="google_contact_sec common_gap">
+  <!--<div class="google_contact_sec common_gap">
     <div class="container">
        <div class="section_title">
           <h2>Google Contacts <br>Información de tus contactos en un vistazo</h2>
@@ -449,7 +449,7 @@
 
 
     </div>
-  </div>
+  </div>-->
 
 
   <div class="google_cloud_sec common_gap">
@@ -514,7 +514,7 @@
                 <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
                 <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
                 <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
-                <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
+                <!--<li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>-->
                 <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
               </ul>
             </div>
