--- a/es/producto.html
+++ b/es/producto.html
@@ -88,7 +88,7 @@
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
                     <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M" target="_blank">VIDEO DE PRODUCTO</a></li>
-                    <li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>
+                    <!--<li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>-->
                 </ul>
               </li>
 
@@ -160,7 +160,7 @@ y totalmente integrado dentro de G Suite.</p>
                 <li><a href="#url"><span>LISTAS DE TAREAS</span></a></li>
                 <li><a href="#url"><span>KANBAN</span></a></li>
                 <li><a href="#url"><span>GANTT</span></a></li>
-                <li><a href="#url"><span>AGÍL</span></a></li>
+                <!--<li><a href="#url"><span>ÁGIL</span></a></li>-->
               </ul>
             </div>
             <div class="where_we_work_tab_bot resp-tabs-container">
@@ -214,7 +214,7 @@ hitos específicos.</P>
 
                   </div>
 
-                  <div class="as_flexible_as_content">
+                  <!--<div class="as_flexible_as_content">
 
                       <div class="row">
                       <div class="col-md-8 as_flexible_as_contentL">
@@ -227,7 +227,7 @@ hitos específicos.</P>
                       </div>
                     </div>
 
-                  </div>
+                  </div>-->
 
             </div>
       </div>
@@ -1045,7 +1045,7 @@ hitos específicos.</P>
           <ul class="tools_list">
             <li><img src="../images/tool_im1.png" alt=""></li>
             <li><img src="../images/tool_im2.png" alt=""></li>
-            <li><img src="../images/tool_im3.png" alt=""></li>
+            <!--<li><img src="../images/tool_im3.png" alt=""></li>-->
           </ul>
         </div>
 
@@ -1095,7 +1095,7 @@ hitos específicos.</P>
               <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
               <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
-              <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
+              <!--<li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>-->
               <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
             </ul>
           </div>
