--- a/madeforgoogle.html
+++ b/madeforgoogle.html
@@ -85,7 +85,7 @@
                     <li><a href="https://blog.workep.com/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">HELP CENTER</a></li>
                     <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M">PRODUCT VIDEO</a></li>
-                    <li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>
+                    <!--<li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>-->
                 </ul>
               </li>
 
@@ -425,30 +425,6 @@
   </div>
 
 
-<div class="google_contact_sec common_gap">
-    <div class="container">
-       <div class="section_title">
-          <h2>Google Contacts <br>Info on your contacts at a glance</h2>
-          <div class="addon_img wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
-            <img src="images/google_contact_icon.png" alt="">
-          </div>
-          <p>Click on a Google contact to expand and visualize their information in Workep. <br>Phone number, email, and anything else you have on them.</p>
-        </div>
-
-        <div class="google_contact_secbot">
-          <div class="google_contact_title">
-            <figure></figure>
-            <span>Daniel Arch</span>
-          </div>
-         <img src="images/group.png" alt="">
-        </div>
-
-
-
-    </div>
-  </div>
-
-
   <div class="google_cloud_sec common_gap">
     <div class="container">
        <div class="section_title">
@@ -496,7 +472,7 @@
         <div class="foot_top_row">
           <div class="foot1">
             <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
-            <p>©2019 Workep,Inc. All rights reserved <br>
+            <p>©2020 Workep,Inc. All rights reserved <br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
             <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love "></i> by Workep</span>
@@ -511,7 +487,7 @@
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
-              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+              <!--<li><a href="https://workep.com/workep-for-education.html">For Education</a></li>-->
               <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
             </ul>
           </div>
