--- a/product.html
+++ b/product.html
@@ -88,7 +88,7 @@
                         <li><a href="https://blog.workep.com/" target="_blank">BLOG</a></li>
                         <li><a href="https://help.workep.com/" target="_blank">HELP CENTER</a></li>
                         <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M">PRODUCT VIDEO</a></li>
-                        <li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>
+                        <!--<li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>-->
                     </ul>
                   </li>
 
@@ -152,15 +152,13 @@ and fully integrated within G Suite.</p>
           <h2>As flexible as it gets!</h2>
           <p> Choose the work methodology that best suits you and your team members.</p>
         </div>
-
-
       <div class="where_we_work_tab where_we_work_tab_slider" id="horizontalTab1">
             <div class="tabbed_navigation container">
               <ul class="where_we_work_list resp-tabs-list">
                 <li><a href="#url"><span>TO-DO LIST</span></a></li>
                 <li><a href="#url"><span>KANBAN</span></a></li>
                 <li><a href="#url"><span>GANTT CHART</span></a></li>
-                <li><a href="#url"><span>AGILE</span></a></li>
+               <!--<li><a href="#url"><span>AGILE</span></a></li>-->
               </ul>
             </div>
             <div class="where_we_work_tab_bot resp-tabs-container">
@@ -216,21 +214,21 @@ rest of the project..</P>
 
                   </div>
 
-                  <div class="as_flexible_as_content">
+                  <div class="as_flexible_as_content" style="width: 100%; display: inline-block;">
 
-                      <div class="row">
-                      <div class="col-md-8 as_flexible_as_contentL" style="border-radius: 10px;">
-                        <video width="100%" height="auto" autoplay loop muted playsinline>
-                          <source src="images/gifts/Agile_V2.webm" type="video/webm" />
-                        </video>
-                      </div>
-                      <div class="col-md-4 as_flexible_as_contentR">
-                        <P>Break your project into iterations,release project segments, evaluate
-their success, and adapt to issues to avoid major failures.</P>
-                      </div>
+                    <!--<div class="row">
+                    <div class="col-md-8 as_flexible_as_contentL" style="border-radius: 10px;">
+                      <video width="100%" height="auto" autoplay="" loop="" muted="" playsinline="">
+                        <source src="images/gifts/Agile_V2.webm" type="video/webm">
+                      </video>
                     </div>
-
+                    <div class="col-md-4 as_flexible_as_contentR">
+                      <p>Break your project into iterations,release project segments, evaluate
+their success, and adapt to issues to avoid major failures.</p>
+                    </div>
                   </div>
+
+                </div>-->
 
             </div>
       </div>
@@ -1048,7 +1046,7 @@ their success, and adapt to issues to avoid major failures.</P>
           <ul class="tools_list">
             <li><img src="images/tool_im1.png" alt=""></li>
             <li><img src="images/tool_im2.png" alt=""></li>
-            <li><img src="images/tool_im3.png" alt=""></li>
+          <!--<li><img src="images/tool_im3.png" alt=""></li>-->
           </ul>
         </div>
 
@@ -1083,7 +1081,7 @@ their success, and adapt to issues to avoid major failures.</P>
         <div class="foot_top_row">
           <div class="foot1">
             <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
-            <p>©2019 Workep,Inc. All rights reserved <br>
+            <p>©2020 Workep,Inc. All rights reserved <br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
             <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love "></i> by Workep</span>
@@ -1098,7 +1096,7 @@ their success, and adapt to issues to avoid major failures.</P>
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
-              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+              <!--<li><a href="https://workep.com/workep-for-education.html">For Education</a></li>-->
               <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
             </ul>
           </div>
