--- a/es/workep-para-educacion.html
+++ b/es/workep-para-educacion.html
@@ -88,7 +88,7 @@
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
                     <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M" target="_blank">VIDEO DE PRODUCTO</a></li>
-                    <li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>
+                    <!--<li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>-->
                 </ul>
               </li>
 
