--- a/terms.html
+++ b/terms.html
@@ -84,7 +84,7 @@
                     <li><a href="https://blog.workep.com/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">HELP CENTER</a></li>
                     <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M">PRODUCT VIDEO</a></li>
-                    <li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>
+                    <!--<li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>-->
                 </ul>
               </li>
 
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <h2>This is boring we know! <br>but it is necesary.</h2>
+        <h2>This is boring we know! <br>but it is necessary.</h2>
         <p>We have prepared a couple clauses to protect you and <br>to protect us. We tried to keep it simple.<br>This agreement is effective: May 25, 2018</p>
        <a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a>
       </div>
@@ -355,7 +355,7 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
       <div class="foot_top_row">
         <div class="foot1">
           <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
-          <p>©2019 Workep,Inc. All rights reserved <br>
+          <p>©2020 Workep,Inc. All rights reserved <br>
             <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
           </p>
           <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love "></i> by Workep</span>
@@ -370,7 +370,7 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
             <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
             <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
-            <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+            <!--<li><a href="https://workep.com/workep-for-education.html">For Education</a></li>-->
             <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
           </ul>
         </div>
