--- a/workep-for-education.html
+++ b/workep-for-education.html
@@ -88,7 +88,7 @@
                     <li><a href="https://blog.workep.com/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">HELP CENTER</a></li>
                     <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M">PRODUCT VIDEO</a></li>
-                    <li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>
+                   <!--<li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>-->
                 </ul>
               </li>
 
