adding again -for education- and companies logos section

--- a/es/hechoparagoogle.html
+++ b/es/hechoparagoogle.html
@@ -514,7 +514,7 @@
                 <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
                 <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
                 <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
-                <!--<li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>-->
+                <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
                 <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
               </ul>
             </div>
