--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
       </div>
     </div>
   </div>
-  <!--
+  
 <div class="lovedby_thousand common_gap lovedby_thousand_indexbg">
     <div class="container">
       <div class="section_title">
@@ -623,7 +623,7 @@
        <img src="images/comp13.png" alt="">
      </div>
    </div>
-</div> -->
+</div>
 <div class="mangmnt_prdctivty common_gap">
   <div class="container">
       <div class="section_title">
@@ -739,7 +739,7 @@
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
-              <!--<li><a href="https://workep.com/workep-for-education.html">For Education</a></li>-->
+              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
               <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
             </ul>
           </div>
