--- a/madeforgoogle.html
+++ b/madeforgoogle.html
@@ -487,7 +487,7 @@
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
-              <!--<li><a href="https://workep.com/workep-for-education.html">For Education</a></li>-->
+              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
               <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
             </ul>
           </div>
