--- a/terms.html
+++ b/terms.html
@@ -370,7 +370,7 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
             <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
             <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
-            <!--<li><a href="https://workep.com/workep-for-education.html">For Education</a></li>-->
+            <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
             <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
           </ul>
         </div>
