--- a/es/es.html
+++ b/es/es.html
@@ -578,7 +578,7 @@
       </div>
     </div>
   </div>
-<!--<div class="lovedby_thousand common_gap lovedby_thousand_indexbg">
+<div class="lovedby_thousand common_gap lovedby_thousand_indexbg">
     <div class="container">
       <div class="section_title">
         <h2>Más de 15.000 equipos utilizan Workep</h2>
@@ -626,7 +626,7 @@
        <img src="../images/comp13.png" alt="">
      </div>
    </div>
-</div>-->
+</div>
 <div class="mangmnt_prdctivty common_gap">
   <div class="container">
       <div class="section_title">
@@ -741,7 +741,7 @@
               <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
               <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
-              <!--<li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>-->
+              <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
               <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
             </ul>
           </div>
