--- a/product.html
+++ b/product.html
@@ -1096,7 +1096,7 @@ their success, and adapt to issues to avoid major failures.</p>
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
-              <!--<li><a href="https://workep.com/workep-for-education.html">For Education</a></li>-->
+              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
               <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
             </ul>
           </div>
