Resposinve desing & Alt SEO
Responsibe desing an alt SEO

--- a/es/es.html
+++ b/es/es.html
@@ -131,12 +131,12 @@
         </ul>
       </div>
   </div>
-  <img src="../images/main_pic@3x.png" alt="" style="max-width: 50%">
+  <img src="../images/main_pic@3x.png" alt="Workep totalmente integrado con G-suite" style="max-width: 50%">
 </div>
 
 <div class="video_covid_container">
   <div class="video_covid_wrapper">
-    <iframe style="border-radius: 10px" width="1200" height="500" src="https://www.youtube.com/embed/IKgB9f9Wv4Y?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe style="border-radius:10px; width: 100%;"  height="500" src="https://www.youtube.com/embed/IKgB9f9Wv4Y?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </div>
 
@@ -150,7 +150,7 @@
   <div class="index_made_forgoogle_bot">
           <div class="madeforgoogle_banner_L">
             <div class="banner_seclft">
-              <img src="../images/google_banner_im1.png" alt="">
+              <img src="../images/google_banner_im1.png" alt="Google Spreedshets, Google Docs, google presentaciones todo en Workep">
             </div>
           </div>
     <div class="container madeforgoogle_ban_content">
@@ -472,7 +472,7 @@
           <div class="all_teams_sizebox">
             <div class="all_teams_sizeboxR">
               <img src="../images/team1.png" alt="workep marketing team">
-              <span class="cloud_im"><img src="../images/cloud.svg" alt=""></span>
+              <span class="cloud_im"><img src="../images/cloud.svg" alt="Workep en la nube"></span>
             </div>
             <div class="all_teams_sizeboxL">
               <h4>Equipos de marketing</h4>
@@ -487,7 +487,7 @@
           <div class="all_teams_sizebox">
              <div class="all_teams_sizeboxR">
               <img src="../images/team2.png" alt="workep consulting team">
-              <span class="cloud_im"><img src="../images/cloud.svg" alt=""></span>
+              <span class="cloud_im"><img src="../images/cloud.svg" alt="Workpep en la nube"></span>
             </div>
             <div class="all_teams_sizeboxL">
               <h4>Empresas de consultoría</h4>
@@ -501,7 +501,7 @@
           <div class="all_teams_sizebox">
             <div class="all_teams_sizeboxR">
               <img src="../images/team3.png" alt="workep development team">
-              <span class="cloud_im"><img src="../images/cloud.svg" alt=""></span>
+              <span class="cloud_im"><img src="../images/cloud.svg" alt="Workpe en la nube"></span>
             </div>
             <div class="all_teams_sizeboxL">
               <h4>Casas de desarrollo</h4>
@@ -515,7 +515,7 @@
           <div class="all_teams_sizebox">
             <div class="all_teams_sizeboxR">
               <img src="../images/team4.png" alt="workep Enterprise team">
-              <span class="cloud_im"><img src="../images/cloud.svg" alt=""></span>
+              <span class="cloud_im"><img src="../images/cloud.svg" alt="Workep en la nube"></span>
             </div>
             <div class="all_teams_sizeboxL">
               <h4>Enterprise</h4>
@@ -541,7 +541,7 @@
             <div class="marketplace_video wistia_responsive_wrapper">
               <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7DHmD2YM1_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <!-- <span class="wistia_embed wistia_async_anuee2yism popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span> -->
-              <!-- <a href="#url" class="marketplace_video_btn"><img src="../images/play-button.svg" alt=""></a> -->
+              <!-- <a href="#url" class="marketplace_video_btn"><img src="../images/play-button.svg" alt=" Play Workep"></a> -->
             </div>
           </div>
 
@@ -559,11 +559,11 @@
               </div>
               <div class="client_proftxt">
                 <span class="client_profLft">
-                  <img src="../images/cameron.png" alt="">
+                  <img src="../images/cameron.png" alt="Perfil de cliente workep">
                 </span>
                 <span class="client_profrt">
                   <span class="client_ratings">
-                    <img src="../images/star.png" alt="">
+                    <img src="../images/star.png" alt="Calificación de Workep">
                   </span>
                   <span class="client_name">Alex Arango</span>
                   <span class="client_desig">CEO Triario</span>
@@ -587,43 +587,43 @@
     </div>
    <div class="companies_list">
      <div class="companies1 wow bounceInUp" data-wow-delay="0.001s" data-wow-duration="3s">
-       <img src="../images/comp1.png" alt="">
+       <img src="../images/comp1.png" alt="Latam 1 Confía en workep">
      </div>
      <div class="companies2 wow bounceInUp" data-wow-delay="0.002s" data-wow-duration="3s" >
-       <img src="../images/comp2.png" alt="">
+       <img src="../images/comp2.png" alt="Shutter stock confía en Workep">
      </div>
      <div class="companies3 wow bounceInUp" data-wow-delay="0.003s" data-wow-duration="3s" >
-       <img src="../images/comp3.png" alt="">
+       <img src="../images/comp3.png" alt="Movibia confía en Workep">
      </div>
      <div class="companies4 wow bounceInUp" data-wow-delay="0.004s" data-wow-duration="3s" >
-       <img src="../images/comp4.png" alt="">
+       <img src="../images/comp4.png" alt="N confía en Workep">
      </div>
      <div class="companies5 wow bounceInUp" data-wow-delay="0.005s" data-wow-duration="3s" >
-       <img src="../images/comp5.png" alt="">
+       <img src="../images/comp5.png" alt="DUO confía en Workpe">
      </div>
      <div class="companies6 wow bounceInUp" data-wow-delay="0.006s" data-wow-duration="3s" >
-       <img src="../images/comp6.png" alt="">
+       <img src="../images/comp6.png" alt="Lyft confía en Workep">
      </div>
      <div class="companies7 wow bounceInUp" data-wow-delay="0.007s" data-wow-duration="3s" >
-       <img src="../images/comp7.png" alt="">
+       <img src="../images/comp7.png" alt="Columbia university confía en Workep">
      </div>
      <div class="companies8 wow bounceInUp" data-wow-delay="0.008s" data-wow-duration="3s" >
-       <img src="../images/comp8.png" alt="">
+       <img src="../images/comp8.png" alt="Ayenda Rooms confía en workep">
      </div>
      <div class="companies9 wow bounceInUp" data-wow-delay="0.009s" data-wow-duration="3s" >
-       <img src="../images/comp9.png" alt="">
+       <img src="../images/comp9.png" alt="Aero méxico confía en workep">
      </div>
      <div class="companies10 wow bounceInUp" data-wow-delay="0.010s" data-wow-duration="3s" >
-       <img src="../images/comp10.png" alt="">
+       <img src="../images/comp10.png" alt="TED confía en workep">
      </div>
      <div class="companies11 wow bounceInUp" data-wow-delay="0.011s" data-wow-duration="3s" >
-       <img src="../images/comp11.png" alt="">
+       <img src="../images/comp11.png" alt="Country Marriott confía en workep">
      </div>
      <div class="companies12 wow bounceInUp" data-wow-delay="0.012s" data-wow-duration="3s" >
-       <img src="../images/comp12.png" alt="">
+       <img src="../images/comp12.png" alt="UBER confía en workep">
      </div>
      <div class="companies13 wow bounceInUp" data-wow-delay="0.013s" data-wow-duration="3s" >
-       <img src="../images/comp13.png" alt="">
+       <img src="../images/comp13.png" alt="WIX confía en workep">
      </div>
    </div>
 </div>
@@ -638,7 +638,7 @@
 
         <!-- <div class="mangmnt_prdctivty_box">
           <figure>
-            <a href="#url"><img src="../images/productivity_im1.png" alt=""></a>
+            <a href="#url"><img src="../images/productivity_im1.png" alt="Productividad Workep"></a>
           </figure>
           <a href="#url" class="seemorebtn">See more</a>
         </div> -->
@@ -658,10 +658,10 @@
           <div class="col-md-5 addi_resouce_bot_L">
             <div class="addi_resouce_bot_L_slider">
               <div class="addi_resouce_im">
-                <img src="../images/addi_resource_im1.jpg" alt="">
+                <img src="../images/addi_resource_im1.jpg" alt="Project management explicado de forma simple.">
               </div>
               <div class="addi_resouce_im">
-                <img src="../images/ebooks/12-skills-project-management.png" alt="">
+                <img src="../images/ebooks/12-skills-project-management.png" alt="Aprenda 12 habilidades que debe tener para er un maestro">
               </div>
             </div>
 
@@ -725,7 +725,7 @@
       <div class="container">
         <div class="foot_top_row">
           <div class="foot1">
-            <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt=""></a>
+            <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt="Logo workep"></a>
             <p>©2020 Workep,Inc. todos los derechos reservados<br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
@@ -772,8 +772,8 @@
           <div class="foot5">
             <h4>Contacto</h4>
             <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt=""></a></li>
-               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt=""></a></li>
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt="Icono correo"></a></li>
+               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt="Icono e-mail"></a></li>
             </ul>
           </div>
         </div>
