--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <div class="video_covid_container">
   <div class="video_covid_wrapper">
-    <iframe style="border-radius: 10px" width="1200" height="500" src="https://www.youtube.com/embed/hiF4fAh4HAU?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe style="border-radius:10px; width: 100%;" height="500" src="https://www.youtube.com/embed/hiF4fAh4HAU?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </div>
 
@@ -468,7 +468,7 @@
           <div class="all_teams_sizebox">
             <div class="all_teams_sizeboxR">
               <img src="images/team1.png" alt="workep marketing team">
-              <span class="cloud_im"><img src="images/cloud.svg" alt=""></span>
+              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep cloud"></span>
             </div>
             <div class="all_teams_sizeboxL">
               <h4>Marketing Teams</h4>
@@ -484,7 +484,7 @@
           <div class="all_teams_sizebox">
              <div class="all_teams_sizeboxR">
               <img src="images/team2.png" alt="workep consulting team">
-              <span class="cloud_im"><img src="images/cloud.svg" alt=""></span>
+              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep Cloud"></span>
             </div>
             <div class="all_teams_sizeboxL">
               <h4>Consulting companies</h4>
@@ -498,7 +498,7 @@
           <div class="all_teams_sizebox">
             <div class="all_teams_sizeboxR">
               <img src="images/team3.png" alt="workep development team">
-              <span class="cloud_im"><img src="images/cloud.svg" alt=""></span>
+              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep cloud"></span>
             </div>
             <div class="all_teams_sizeboxL">
               <h4>Development Studios</h4>
@@ -512,7 +512,7 @@
           <div class="all_teams_sizebox">
             <div class="all_teams_sizeboxR">
               <img src="images/team4.png" alt="workep Enterprise team">
-              <span class="cloud_im"><img src="images/cloud.svg" alt=""></span>
+              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep Cloud"></span>
             </div>
             <div class="all_teams_sizeboxL">
               <h4>Enterprise</h4>
@@ -557,11 +557,11 @@
               </div>
               <div class="client_proftxt">
                 <span class="client_profLft">
-                  <img src="images/chat_bot.png" alt="">
+                  <img src="images/chat_bot.png" alt="Workep Chatbot">
                 </span>
                 <span class="client_profrt">
                   <span class="client_ratings">
-                    <img src="images/star.png" alt="">
+                    <img src="images/star.png" alt="Workep stars">
                   </span>
                   <span class="client_name">Diego Cardenas</span>
                 </span>
@@ -584,43 +584,43 @@
     </div>
    <div class="companies_list">
      <div class="companies1 wow bounceInUp" data-wow-delay="0.001s" data-wow-duration="1s">
-       <img src="images/comp1.png" alt="">
+       <img src="images/comp1.png" alt="Latam supports workep">
      </div>
      <div class="companies2 wow bounceInUp" data-wow-delay="0.002s" data-wow-duration="1s" >
-       <img src="images/comp2.png" alt="">
+       <img src="images/comp2.png" alt="Shuterstock supports workep">
      </div>
      <div class="companies3 wow bounceInUp" data-wow-delay="0.003s" data-wow-duration="1s" >
-       <img src="images/comp3.png" alt="">
+       <img src="images/comp3.png" alt="Mobivia supports workep">
      </div>
      <div class="companies4 wow bounceInUp" data-wow-delay="0.004s" data-wow-duration="1s" >
-       <img src="images/comp4.png" alt="">
+       <img src="images/comp4.png" alt="N supports workep">
      </div>
      <div class="companies5 wow bounceInUp" data-wow-delay="0.005s" data-wow-duration="1s" >
-       <img src="images/comp5.png" alt="">
+       <img src="images/comp5.png" alt="DUO supports workep">
      </div>
      <div class="companies6 wow bounceInUp" data-wow-delay="0.006s" data-wow-duration="1s" >
-       <img src="images/comp6.png" alt="">
+       <img src="images/comp6.png" alt="Lyft supports workep">
      </div>
      <div class="companies7 wow bounceInUp" data-wow-delay="0.007s" data-wow-duration="1s" >
-       <img src="images/comp7.png" alt="">
+       <img src="images/comp7.png" alt="Columbia University supports workep">
      </div>
      <div class="companies8 wow bounceInUp" data-wow-delay="0.008s" data-wow-duration="1s" >
-       <img src="images/comp8.png" alt="">
+       <img src="images/comp8.png" alt="Ayenda supports workep">
      </div>
      <div class="companies9 wow bounceInUp" data-wow-delay="0.009s" data-wow-duration="1s" >
-       <img src="images/comp9.png" alt="">
+       <img src="images/comp9.png" alt="Aeromexico supports workep">
      </div>
      <div class="companies10 wow bounceInUp" data-wow-delay="0.010s" data-wow-duration="1s" >
-       <img src="images/comp10.png" alt="">
+       <img src="images/comp10.png" alt="TED supports workep">
      </div>
      <div class="companies11 wow bounceInUp" data-wow-delay="0.011s" data-wow-duration="1s" >
-       <img src="images/comp11.png" alt="">
+       <img src="images/comp11.png" alt="Country Marriott supports workep">
      </div>
      <div class="companies12 wow bounceInUp" data-wow-delay="0.012s" data-wow-duration="1s" >
-       <img src="images/comp12.png" alt="">
+       <img src="images/comp12.png" alt="Uber supports workep">
      </div>
      <div class="companies13 wow bounceInUp" data-wow-delay="0.013s" data-wow-duration="1s" >
-       <img src="images/comp13.png" alt="">
+       <img src="images/comp13.png" alt="WIX supports workep">
      </div>
    </div>
 </div>
@@ -635,7 +635,7 @@
 
         <!-- <div class="mangmnt_prdctivty_box">
           <figure>
-            <a href="#url"><img src="images/productivity_im1.png" alt=""></a>
+            <a href="#url"><img src="images/productivity_im1.png" alt="Productiviy Workep"></a>
           </figure>
           <a href="#url" class="seemorebtn">See more</a>
         </div> -->
@@ -770,8 +770,8 @@
           <div class="foot5">
             <h4>Contact</h4>
             <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt=""></a></li>
-               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt=""></a></li>
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="hastag"></a></li>
+               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail"></a></li>
             </ul>
           </div>
         </div>
