--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </ul>
       </div>
   </div>
-  <img src="images/main_pic@3x.png" alt="" style="max-width: 45%">
+  <img src="images/main_pic@3x.png" alt="Workep colaboration software" style="max-width: 45%">
 </div>
 
 <div class="video_covid_container">
