--- a/es/es.html
+++ b/es/es.html
@@ -208,7 +208,7 @@
 
 
           <!-- <div class="collaboration_allim">
-            <img src="../images/proj_mang_allslide.png" alt="">
+            <img src="../images/proj_mang_allslide.png" alt="Workep project software">
           </div>
           <div class="collaboration_list_index_tabcontent">
 
