--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <div class="index_made_forgoogle_bot">
           <div class="madeforgoogle_banner_L">
             <div class="banner_seclft">
-              <img src="images/google_banner_im1.png" alt="">
+              <img src="images/google_banner_im1.png" alt="Apps for google">
             </div>
           </div>
     <div class="container madeforgoogle_ban_content">
@@ -206,7 +206,7 @@
           </video>
 
           <!-- <div class="collaboration_allim">
-            <img src="images/proj_mang_allslide.png" alt="">
+            <img src="images/proj_mang_allslide.png" alt="Project for google suite">
           </div>
           <div class="collaboration_list_index_tabcontent">
 
@@ -538,7 +538,7 @@
             <div class="marketplace_video wistia_responsive_wrapper">
               <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7DHmD2YM1_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <!-- <span class="wistia_embed wistia_async_anuee2yism popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span> -->
-              <!-- <a href="#url" class="marketplace_video_btn"><img src="images/play-button.svg" alt=""></a> -->
+              <!-- <a href="#url" class="marketplace_video_btn"><img src="images/play-button.svg" alt="Market place google"></a> -->
             </div>
           </div>
 
@@ -655,10 +655,10 @@
           <div class="col-md-5 addi_resouce_bot_L">
             <div class="addi_resouce_bot_L_slider">
               <div class="addi_resouce_im">
-                <img src="images/addi_resource_im1.jpg" alt="">
+                <img src="images/addi_resource_im1.jpg" alt="Project management made simple">
               </div>
               <div class="addi_resouce_im">
-                <img src="images/ebooks/12-skills-project-management.png" alt="">
+                <img src="images/ebooks/12-skills-project-management.png" alt="E book 12 skill for project management">
               </div>
             </div>
 
@@ -723,11 +723,11 @@
       <div class="container">
         <div class="foot_top_row">
           <div class="foot1">
-            <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
+            <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Logo Workep"></a>
             <p>©2020 Workep,Inc. All rights reserved <br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
-            <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love "></i> by Workep</span>
+            <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love"></i> by Workep</span>
           </div>
           <div class="foot2">
             <h4>Product</h4>
