--- a/competitors-airtable.html
+++ b/competitors-airtable.html
@@ -4,11 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Workep</title>
-   
+    <title>Workep because it's better than Airtable discover it here!</title>
+   <meta name="description" content="Discover because Workep is the better response, to be more productive and efficient in your work. If your team need that, Learn more here it. ">
      <!-- Page icon -->
-    <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
-      
+    <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">  
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/easy-responsive-tabs.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -18,12 +17,8 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/dics.original.css">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="style.css">
-  
-
-
-
-  </head>
+    <link rel="stylesheet" href="css/style.competitors.css">
+ </head>
 <body>
     
 
@@ -50,17 +45,17 @@
       <div class="container">
           <div class="competition-vs-name">
             <div class="competition-logo1">
-              <img src="images/workep-logonew.png" alt="">
+              <img src="images/workep-logonew.png" alt="New logo Workep">
             </div>
             <div class="competition-logo2">
-              <img src="images/airtable1.png" alt="">
+              <img src="images/airtable1.png" alt="Airtable Logo">
             </div>
           </div>
           <div class="competitor-sec1-form">
             <div class="competitor-sec1-formL">
               <p><strong>Using</strong> Workep is just like using G Suite-simple, intuitive, and quick to adopt, whereas using Airtable is like a complicated collection of Excel sheet templates.</p>
               <figure>
-                <img src="images/comp-z.png" alt="">
+                <img src="images/comp-z.png" alt="Multi apps">
               </figure>
             </div>
             <div class="competitor-sec1-formR">
@@ -574,7 +569,7 @@
           <div>
             <div class="competitors-testimonial-slide">
               <figure>
-                <img src="images/test-im1.png" alt="">
+                <img src="images/test-im1.png" alt="Person 1">
               </figure>
               <div class="competitors-testimonial-rt">
                 <div class="competitors-testimonial-txt">
@@ -588,7 +583,7 @@
           <div>
             <div class="competitors-testimonial-slide">
               <figure>
-                <img src="images/test-im1.png" alt="">
+                <img src="images/test-im1.png" alt="Person 2">
               </figure>
               <div class="competitors-testimonial-rt">
                 <div class="competitors-testimonial-txt">
@@ -656,13 +651,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
     <div class="joinworkep joinworkep-slim">
         <div class="container">
           <h2>Try workep for free!</h2>
@@ -774,10 +762,6 @@
       </div>
     </div>
   </footer>
-
-
-
-
   	<!-- Jquery-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
@@ -788,8 +772,5 @@
 <script src="js/easy-responsive-tabs.js"></script>
 <script src="js/dics.original.js"></script>
 <script src="js/common.js"></script>
-
-
-
-  </body>
+</body>
 </html>	
