--- a/competitors-wrike.html
+++ b/competitors-wrike.html
@@ -81,7 +81,7 @@
     <div class="difference-competitors common_gap">
       <div class="container">
             <div class="section_title">
-              <h2>What are the differences between Workep and Asana?</h2>
+              <h2>What are the differences between Workep and Wrike?</h2>
             </div>
 
             <div class="foundation_sec_slider foundation_sec_slider_new">
@@ -180,21 +180,21 @@
                 <div class="foundation_sec_slider_box">
                   <img src="images/time-tracker.png" alt="Time traker workep">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Click the time tracker icon in a task, or open up the time tracker panel to get started tracking time in Workep. In Asana, you have to download a Chrome extension and go through the setup process.</span></p>
+                    <p><span>Click the time tracker icon in a task, or open up the time tracker panel to get started tracking time in Workep. In Wrike, you have to download a Chrome extension and go through the setup process.</span></p>
                   </div>
                 </div>
 
                 <div class="foundation_sec_slider_box">
                   <img src="images/native-google-drive.png" alt="Google Drive integration workep">
                   <div class="foundation_sec_slider_title">
-                    <p><span>You don’t have to take any extra steps to sync Workep with your Google Drive — it’s completely automatic. In Asana, you have to manually activate the integration with Drive.</span></p>
+                    <p><span>You don’t have to take any extra steps to sync Workep with your Google Drive — it’s completely automatic. In Wrike, you have to manually activate the integration with Drive.</span></p>
                   </div>
                 </div>
 
                 <div class="foundation_sec_slider_box">
                   <img src="images/native-calender.png" alt="Native Calendar integration Workep">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Google Calendar is your native calendar in Workep, so your project calendars sync and update back and forth automatically. In Asana, you have to manually sync projects and tasks one way to Calendar.</span></p>
+                    <p><span>Google Calendar is your native calendar in Workep, so your project calendars sync and update back and forth automatically. In Wrike, you have to manually sync projects and tasks one way to Calendar.</span></p>
                   </div>
                 </div>
 
@@ -208,35 +208,35 @@
                <!--  <div class="foundation_sec_slider_box">
                   <img src="images/workloads.png" alt="">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Use Workep’s automated Gantt chart to view your all your tasks laid out against a timeline, create dependencies, and export it to a spreadsheet to use for reporting. There is no Gantt chart view in Asana.</span></p>
+                    <p><span>Use Workep’s automated Gantt chart to view your all your tasks laid out against a timeline, create dependencies, and export it to a spreadsheet to use for reporting. There is no Gantt chart view in Wrike.</span></p>
                   </div>
                 </div>
 
                 <div class="foundation_sec_slider_box">
                   <img src="images/portfolios.png" alt="">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Use Workep’s automated Gantt chart to view your all your tasks laid out against a timeline, create dependencies, and export it to a spreadsheet to use for reporting. There is no Gantt chart view in Asana.</span></p>
+                    <p><span>Use Workep’s automated Gantt chart to view your all your tasks laid out against a timeline, create dependencies, and export it to a spreadsheet to use for reporting. There is no Gantt chart view in Wrike.</span></p>
                   </div>
                 </div> -->
 
                 <div class="foundation_sec_slider_box">
                   <img src="images/external-collab.png" alt="External Collaboration workep">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Share your Workep projects with anyone outside of your organization — no signup or extra steps required! Anyone you want to share your Asana projects with has to sign up and create an account. </span></p>
+                    <p><span>Share your Workep projects with anyone outside of your organization — no signup or extra steps required! Anyone you want to share your Wrike projects with has to sign up and create an account. </span></p>
                   </div>
                 </div>
 
                 <div class="foundation_sec_slider_box">
                   <img src="images/budget-tracker.png" alt="Budget Traker Workep">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Assign an hourly value to your team members to sum up the budget spent working on each task in Workep. Asana doesn’t have an in-app budget tracker, so you have to use additional tools.</span></p>
+                    <p><span>Assign an hourly value to your team members to sum up the budget spent working on each task in Workep. Wrike doesn’t have an in-app budget tracker, so you have to use additional tools.</span></p>
                   </div>
                 </div>
 
                 <div class="foundation_sec_slider_box">
                   <img src="images/gnatt-chart-big.png" alt="Gantt chartt Workep">
                   <div class="foundation_sec_slider_title">
-                    <p><span>Use Workep’s automated Gantt chart to view your all your tasks laid out against a timeline, create dependencies, and export it to a spreadsheet to use for reporting. There is no Gantt chart view in Asana.</span></p>
+                    <p><span>Use Workep’s automated Gantt chart to view your all your tasks laid out against a timeline, create dependencies, and export it to a spreadsheet to use for reporting. There is no Gantt chart view in Wrike.</span></p>
                   </div>
                 </div>
 
@@ -271,8 +271,8 @@
             
            <div class="b-dics">
 
-            <img src="images/comp-wrike.png" alt="Wrike Dashboard">
-             <img src="images/comp-workep.png" alt="Workep Dashboard">
+            <img src="images/comp-wrike.png" alt="">
+             <img src="images/comp-workep.png" alt="">
             </div>
 
             <div class="diff-approach-secB-des">
@@ -281,27 +281,22 @@
           </div>
       </div>
     </div>
-
-
     <div class="external-collab common_gap">
       <div class="container">
           <div class="section_title">
             <h2>The power of our external collaboration </h2>
             <p>This is our Gantt in the shared mode, you can see our roadmap here ;)</p>
           </div>
-
-          <div class="external-collab-bot">
+           <div class="external-collab-bot">
             <div class="external-collab-iframe">
-              <iframe src="https://app.workep.com/share-g/de9jD0QBIV"></iframe>
+                <figure>
+                    <img src="images/gantt-cover.png" alt="Gantt exammple">
+                </figure>
+              <!--<iframe src="https://app.workep.com/share-g/de9jD0QBIV"></iframe>-->
             </div>
           </div>
-         
-
-
       </div>
     </div>
-
-
     <div class="project_progress common_gap">
       <div class="container">
           <div class="section_title">
@@ -559,18 +554,20 @@
         <div class="competitors-testimonial-in">
         <div class="competitors-testimonial-slider">
           <div>
-            <div class="competitors-testimonial-slide">
-              <figure>
-                <img src="images/test-im1.png" alt="">
-              </figure>
-              <div class="competitors-testimonial-rt">
-                <div class="competitors-testimonial-txt">
-                  <p>It has been a great discovery for our students and teachers to apply this tool in our work environments. Highly recommended for its simplicity, agility, and integration with G Suite.</p>
+            <div>
+                <div class="competitors-testimonial-slide">
+                  <figure>
+                    <img src="images/peoplefaces/javier.jpeg" alt="Persona #1">
+                  </figure>
+                  <div class="competitors-testimonial-rt">
+                    <div class="competitors-testimonial-txt">
+                      <p>After a thorough review of the products available on the market, we bet on Workep. After a year of use, we see that we were not wrong with our decision.</p>
+                    </div>
+                    <p class="competitors-testimonial-name"><strong>Juán José Sánchez</strong></p>
+                    <p class="competitors-testimonial-place">(Raices, Salvador)</p>
+                  </div>
                 </div>
-                <p class="competitors-testimonial-name"><strong>Javier Prada</strong></p>
-                <p class="competitors-testimonial-place">(EUSA University, Spain)</p>
-              </div>
-            </div>
+          </div>
           </div>
           <div>
             <div class="competitors-testimonial-slide">
@@ -586,22 +583,7 @@
               </div>
             </div>
           </div>
-          <div>
-            <div class="competitors-testimonial-slide">
-              <figure>
-                <img src="images/test-im1.png" alt="Customer #2">
-              </figure>
-              <div class="competitors-testimonial-rt">
-                <div class="competitors-testimonial-txt">
-                  <p>It has been a great discovery for our students and teachers to apply this tool in our work environments. Highly recommended for its simplicity, agility, and integration with G Suite.</p>
-                </div>
-                <p class="competitors-testimonial-name"><strong>Javier Prada</strong></p>
-                <p class="competitors-testimonial-place">(EUSA University, Spain)</p>
-              </div>
-            </div>
-          </div>
-
-        </div>
+         </div>
         </div>
       </div>
     </div>
