--- a/es/budget-tracker.html
+++ b/es/budget-tracker.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>	
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -159,11 +159,11 @@
       <div class="container">
         <div class="foot_top_row">
           <div class="foot1">
-            <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Logo Workep"></a>
+            <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt="Logo Workep"></a>
             <p>©2020 Workep,Inc. All rights reserved <br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
-            <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love"></i> by Workep</span>
+            <span class="madeby">Made with <i><img src="../images/heart_im.png" alt="workep made with love"></i> by Workep</span>
           </div>
           <div class="foot2">
             <h4>Product</h4>
@@ -234,8 +234,8 @@
           <div class="foot5">
             <h4>Contact</h4>
             <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="hastag"></a></li>
-               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail"></a></li>
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt="hastag"></a></li>
+               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt="E-mail"></a></li>
             </ul>
           </div>
        
